<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/black"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="16dp"
        tools:context="com.demo.android.demoapplication.TimerFragment">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/white"
            android:text="@string/schedule_message" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:scrollbars="vertical"
            >

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/text_custom_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:layout_gravity="start"
            android:drawablePadding="8dp"
            android:textSize="16sp"
            android:text="@string/or_set_your_own_custom_timer"
            android:textColor="@android:color/white"
            android:drawableRight="@drawable/ic_down_arrow"
            ></TextView>



        <Button
            android:id="@+id/button_start_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_button"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/start_meeting"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>